--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,24 +10,23 @@ dependencies:
   flutter:
     sdk: flutter
   
-  smooth_page_indicator: ^1.0.0+2  # Smooth page indicators for onboarding
-  flutter_native_splash: ^2.2.18  # Custom splash screen generation
-  image_picker: ^1.1.2
-  google_fonts: ^6.2.1
-  flutter_launcher_icons: ^0.14.1
-  url_launcher: ^6.3.1
-  file_picker: ^8.1.3
-  geolocator: ^13.0.1
-  shared_preferences: ^2.3.2
+  # Dependencies for UI and functionality
+  smooth_page_indicator: ^1.0.0+2      # Page indicators for onboarding
+  flutter_native_splash: ^2.2.18       # Generates splash screen
+  image_picker: ^1.1.2                 # Pick images from gallery/camera
+  google_fonts: ^6.2.1                 # Google Fonts for typography
+  flutter_launcher_icons: ^0.14.1      # For app launcher icons
+  url_launcher: ^6.3.1                 # Opens URLs in a browser
+  file_picker: ^8.1.3                  # File picker for documents/files
+  geolocator: ^13.0.1                  # Access device geolocation
+  shared_preferences: ^2.3.2           # Local storage for simple data
 
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/app_icon/logo.png"  # Path to your icon image (should be 512x512 or 1024x1024)
-  adaptive_icon_background: "#ffffff"     # Optional for Android adaptive icons
-  adaptive_icon_foreground: "assets/app_icon/icon.png"  # Optional
-
-    
+  image_path: "assets/app_icon/logo.png"           # Main app icon
+  adaptive_icon_background: "#ffffff"              # Android adaptive icon bg
+  adaptive_icon_foreground: "assets/app_icon/icon.png"  # Adaptive icon fg
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +37,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    # Core assets
     - assets/logo.png
     - assets/onboarding1.png
     - assets/onboarding2.png
@@ -46,22 +46,26 @@ flutter:
     - assets/google_logo.png
     - assets/facebook_logo.png
     - assets/empty_notifications.png
+    
+    # Additional assets for user flow images
     - assets/forgot_password_image.png
     - assets/new_password_image.png
     - assets/password_reset_success_image.png
     - assets/setup_profile_image.png
+    
+    # Avatar images for user profiles
     - assets/avatars/avatar1.png
     - assets/avatars/avatar2.png
     - assets/avatars/avatar3.png
     - assets/avatars/avatar4.png
     - assets/avatars/avatar5.png
 
-# Define custom fonts
+  # Font family definitions
   fonts:
-    - family: Poppins  # Font family name
+    - family: Poppins
       fonts:
-        - asset: assets/fonts/Poppins-Regular.ttf  # Regular font style
-        - asset: assets/fonts/Poppins-Bold.ttf     # Bold font style
+        - asset: assets/fonts/Poppins-Regular.ttf         # Regular
+        - asset: assets/fonts/Poppins-Bold.ttf            # Bold
           weight: 700
-        - asset: assets/fonts/Poppins-Italic.ttf   # Italic font style
+        - asset: assets/fonts/Poppins-Italic.ttf          # Italic
           style: italic
